tests/v2_0/invalid/import_not_found.devops
version = "v2.0"

// Importing a file that doesn't exist
import "./nonexistent_file.devops"

target "local" { address = "localhost:7700" }
